Create SearchResults page

--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -105,6 +105,9 @@
         </form>
       </div>
     </div>
+    <div>
+      <a href="search.html">search</a>
+    </div>
 
     <script type="module" src="/src/index.js"></script>
   </body>
