--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -24,8 +24,8 @@
     <title>Consultorio Virtual</title>
   </head>
   <body>
-    <nav id="mainNav" class="navbar navbar-expand-lg">
-      <div class="container-fluid">
+    <nav id="mainNav" class="p-5 navbar navbar-expand-lg">
+      <div class="container lg-col-8">
         <a class="navbar-brand fs-3" href="#">@ Consultorio Virtual</a>
         <button
           class="navbar-toggler"
@@ -74,21 +74,20 @@
     </nav>
 
     <section id="homeSearch" class="d-flex justify-content-center">
-      <div class="d-flex p-5 m-5" id="searchForm">
-        <div class="p-3 mt-3 me-10">
+      <div class="d-flex flex-wrap p-5" id="searchForm">
+        <div class="p-3 me-lg-5">
           <h1>Encuentra tu cita</h1>
         </div>
-        <div class="d-flex">
+        <div class="d-flex p-3">
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label"
                 >Especialidad</label
               >
               <input
-                type="email"
+                type="text"
                 class="form-control"
                 placeholder="Especialidad (ej. pediatría)"
-                aria-describedby="emailHelp"
               />
             </div>
             <div class="mb-3">
@@ -96,21 +95,37 @@
                 >Ubicación</label
               >
               <input
-                type="password"
+                type="text"
+                size="40ch"
                 class="form-control"
                 placeholder="Ubicación (Centro médico)"
               />
             </div>
-            <div class="d-flex">
-              <div class="mb-3 form-check">
+            <div class="d-flex justify-content-between">
+              <div class="mb-3 form-check d-flex align-items-center">
                 <input type="checkbox" class="form-check-input" />
-                <label class="form-check-label">Consulta virtual</label>
+                <label class="form-check-label ms-2">Consulta virtual</label>
               </div>
               <button type="button" class="btn btn-lg m-3 buscar">
                 Buscar
               </button>
             </div>
           </form>
+        </div>
+      </div>
+    </section>
+
+    <section id="mostSearched" class="p-5">
+      <div class="container d-flex flex-column align-items-start">
+        <div>
+          <h3>Especialidades más buscadas</h3>
+        </div>
+        <div class="d-flex">
+          <button type="button" class="btn btn-lg m-3 buscar">
+            Medicina general
+          </button>
+          <button type="button" class="btn btn-lg m-3 buscar">Pediatría</button>
+          <button type="button" class="btn btn-lg m-3 buscar">Nutrición</button>
         </div>
       </div>
     </section>
