--- a/ConsultorioVirtual/search.html
+++ b/ConsultorioVirtual/search.html
@@ -74,7 +74,7 @@
     </nav>
 
     <section id="filterSearchResutls" class="">
-      <div class="" id="resultsPage">
+      <div class="container" id="resultsPage">
         <h1 class="p-2 m-4">Especialidad, Ciudad</h1>
       </div>
     </section>
