Features and Faqs

--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -21,11 +21,16 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+
     <title>Consultorio Virtual</title>
   </head>
   <body>
     <nav id="mainNav" class="p-5 navbar navbar-expand-lg">
-      <div class="container lg-col-8">
+      <div class="container md-col-8">
         <a class="navbar-brand fs-3" href="#">@ Consultorio Virtual</a>
         <button
           class="navbar-toggler"
@@ -106,7 +111,7 @@
                 <input type="checkbox" class="form-check-input" />
                 <label class="form-check-label ms-2">Consulta virtual</label>
               </div>
-              <button type="button" class="btn btn-lg m-3 buscar">
+              <button type="button" class="btn btn-lg m-3 search">
                 Buscar
               </button>
             </div>
@@ -116,16 +121,106 @@
     </section>
 
     <section id="mostSearched" class="p-5">
-      <div class="container d-flex flex-column align-items-start">
+      <div class="container lg-col-6 d-flex flex-column align-items-start">
         <div>
           <h3>Especialidades más buscadas</h3>
         </div>
-        <div class="d-flex">
-          <button type="button" class="btn btn-lg m-3 buscar">
+        <div
+          class="container md-col-8 d-flex justify-content-around border border-black"
+        >
+          <button type="button" class="btn btn-lg m-3 py-4 search">
             Medicina general
           </button>
-          <button type="button" class="btn btn-lg m-3 buscar">Pediatría</button>
-          <button type="button" class="btn btn-lg m-3 buscar">Nutrición</button>
+          <button type="button" class="btn btn-lg m-3 search-2">
+            Pediatría
+          </button>
+          <button type="button" class="btn btn-lg m-3 search-3">
+            Nutrición
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section id="newDoctors" class="p-5">
+      <div class="container md-col-8 d-flex flex-column align-items-start">
+        <div>
+          <h3>Nuevos profesionales</h3>
+        </div>
+        <div
+          class="container lg-col-8 d-flex justify-content-around border border-black"
+        >
+          <div class="m-3 d-flex flex-column">
+            <img src="https://placehold.co/180x120" />
+            <div><span>Nombre </span> - <span> Especialidad</span></div>
+          </div>
+          <div class="m-3 d-flex flex-column">
+            <img src="https://placehold.co/180x120" />
+            <div><span>Nombre </span> - <span> Especialidad</span></div>
+          </div>
+          <div class="m-3 d-flex flex-column">
+            <img src="https://placehold.co/180x120" />
+            <div><span>Nombre </span> - <span> Especialidad</span></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Faqs" class="p-5">
+      <div class="container md-col-8 d-flex justify-content-between">
+        <div class="d-flex flex-column justify-content-center">
+          <h3>Preguntas frecuentes</h3>
+          <h5 class="py-2">
+            Podrás resolver, de forma anónima, todas tus dudas en materia de
+            salud.
+          </h5>
+          <ul>
+            <li>Recibirás una respuesta fiable y de calidad</li>
+            <li>Tu duda será resuelta en 48 horas</li>
+            <li>Y, por supuesto, de forma gratuita</li>
+          </ul>
+        </div>
+        <div class="px-md-5">
+          <img src="https://placehold.co/260x300" alt="Faqs" />
+        </div>
+      </div>
+    </section>
+
+    <section id="Features" class="p-5">
+      <div class="container md-col-8 d-flex flex-wrap">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card text-center h-100">
+              <i class="bi bi-star fs-1"></i>
+              <div class="card-body">
+                <h5 class="card-title">Encuentra a tu médico</h5>
+                <p class="card-text">Selecciona el especialista y ubicación.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center h-100">
+              <i class="bi bi-clock fs-1"></i>
+              <div class="card-body">
+                <h5 class="card-title">Elije el horario</h5>
+                <p class="card-text">
+                  Selecciona fecha y hora y agenda tu cita en el horario que mas
+                  te convenga.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center h-100">
+              <i class="bi bi-flag fs-1"></i>
+              <div class="card-body">
+                <h5 class="card-title">Confirmación y pago</h5>
+                <p class="card-text">
+                  Confirma la cita en un minuto y realiza el pago desde la
+                  plataforma.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
