Reviews and subscription

--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -86,9 +86,7 @@
         <div class="d-flex p-3">
           <form>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label"
-                >Especialidad</label
-              >
+              <label for="" class="form-label">Especialidad</label>
               <input
                 type="text"
                 class="form-control"
@@ -96,9 +94,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label"
-                >Ubicación</label
-              >
+              <label for="" class="form-label">Ubicación</label>
               <input
                 type="text"
                 size="40ch"
@@ -165,7 +161,7 @@
       </div>
     </section>
 
-    <section id="Faqs" class="p-5">
+    <section id="faqs" class="p-5">
       <div class="container md-col-8 d-flex justify-content-between">
         <div class="d-flex flex-column justify-content-center">
           <h3>Preguntas frecuentes</h3>
@@ -185,7 +181,7 @@
       </div>
     </section>
 
-    <section id="Features" class="p-5">
+    <section id="features" class="p-5">
       <div class="container md-col-8 d-flex flex-wrap">
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -222,6 +218,105 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="reviws" class="p-5 container md-col-8">
+      <div id="carouselReviews" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="card text-center h-100">
+              <div class="card-body d-flex flex-column align-items-center">
+                <p class="card-text w-50">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
+                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
+                </p>
+                <img src="https://placehold.co/80x80" class="rounded-circle" />
+                <h5 class="card-title">Faustino Asprilla - Usuario</h5>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center h-100">
+              <div class="card-body d-flex flex-column align-items-center">
+                <p class="card-text w-50">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
+                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
+                </p>
+                <img src="https://placehold.co/80x80" class="rounded-circle" />
+                <h5 class="card-title">Carlos Valderrama- Medico general</h5>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center h-100">
+              <div class="card-body d-flex flex-column align-items-center">
+                <p class="card-text w-50">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
+                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
+                </p>
+                <img src="https://placehold.co/80x80" class="rounded-circle" />
+
+                <h5 class="card-title">Leonel Alvarez - Usuario</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselReviews"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselReviews"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <section id="subscription" class="d-flex justify-content-center">
+      <div class="d-flex flex-column p-5 align-items-center" id="contactForm">
+        <div class="p-3">
+          <h3>Mantente actualizado</h3>
+          <p>
+            Suscribete a nuestro boletín mensual con actualizaciones del sitio.
+          </p>
+        </div>
+        <form>
+          <div class="d-flex gap-3 p-3 align-items-center">
+            <div>
+              <input
+                type="text"
+                size="25ch"
+                class="form-control"
+                placeholder="Correo electrónico"
+              />
+            </div>
+            <div>
+              <input
+                type="text"
+                size="25ch"
+                class="form-control"
+                placeholder="Nombre completo"
+              />
+            </div>
+            <div>
+              <button type="button" class="btn search-2">Suscribete</button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
 
