--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -122,15 +122,15 @@
           <h3>Especialidades más buscadas</h3>
         </div>
         <div
-          class="container md-col-8 d-flex justify-content-around border border-black"
+          class="container md-col-8 d-flex flex-wrap justify-content-around border border-black"
         >
           <button type="button" class="btn btn-lg m-3 py-4 search">
             Medicina general
           </button>
-          <button type="button" class="btn btn-lg m-3 search-2">
+          <button type="button" class="btn btn-lg m-3 py-4 search-2">
             Pediatría
           </button>
-          <button type="button" class="btn btn-lg m-3 search-3">
+          <button type="button" class="btn btn-lg m-3 py-4 search-3">
             Nutrición
           </button>
         </div>
@@ -143,7 +143,7 @@
           <h3>Nuevos profesionales</h3>
         </div>
         <div
-          class="container lg-col-8 d-flex justify-content-around border border-black"
+          class="container lg-col-8 d-flex flex-wrap justify-content-around border border-black"
         >
           <div class="m-3 d-flex flex-column">
             <img src="https://placehold.co/180x120" />
@@ -162,12 +162,11 @@
     </section>
 
     <section id="faqs" class="p-5">
-      <div class="container md-col-8 d-flex justify-content-between">
+      <div class="container md-col-8 d-flex flex-wrap justify-content-between">
         <div class="d-flex flex-column justify-content-center">
           <h3>Preguntas frecuentes</h3>
           <h5 class="py-2">
-            Podrás resolver, de forma anónima, todas tus dudas en materia de
-            salud.
+            Podrás resolver, todas tus dudas en materia de salud.
           </h5>
           <ul>
             <li>Recibirás una respuesta fiable y de calidad</li>
@@ -221,38 +220,43 @@
       </div>
     </section>
 
-    <section id="reviws" class="p-5 container md-col-8">
+    <section id="reviews" class="p-5 container md-col-8">
       <div id="carouselReviews" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card text-center h-100">
-              <div class="card-body d-flex flex-column align-items-center">
+              <div
+                class="card-body d-flex flex-column align-items-center review-card"
+              >
+                <p class="card-text w-50">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque."
+                </p>
+                <img src="https://placehold.co/80x80" class="rounded-circle" />
+                <h5 class="py-2">Faustino Asprilla - Usuario</h5>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card text-center h-100">
+              <div
+                class="card-body d-flex flex-column align-items-center review-card"
+              >
                 <p class="card-text w-50">
                   "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
                   Duis vulputate commodo lectus, ac blandit elit tincidunt id."
                 </p>
                 <img src="https://placehold.co/80x80" class="rounded-circle" />
-                <h5 class="card-title">Faustino Asprilla - Usuario</h5>
+                <h5 class="py-2">Carlos Valderrama- Médico general</h5>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="card text-center h-100">
-              <div class="card-body d-flex flex-column align-items-center">
-                <p class="card-text w-50">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
-                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
-                </p>
-                <img src="https://placehold.co/80x80" class="rounded-circle" />
-                <h5 class="card-title">Carlos Valderrama- Medico general</h5>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card text-center h-100">
-              <div class="card-body d-flex flex-column align-items-center">
+              <div
+                class="card-body d-flex flex-column align-items-center review-card"
+              >
                 <p class="card-text w-50">
                   "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
@@ -260,7 +264,7 @@
                 </p>
                 <img src="https://placehold.co/80x80" class="rounded-circle" />
 
-                <h5 class="card-title">Leonel Alvarez - Usuario</h5>
+                <h5 class="py-2">Leonel Alvarez - Usuario</h5>
               </div>
             </div>
           </div>
@@ -286,7 +290,7 @@
       </div>
     </section>
 
-    <section id="subscription" class="d-flex justify-content-center">
+    <section id="contact" class="d-flex justify-content-center">
       <div class="d-flex flex-column p-5 align-items-center" id="contactForm">
         <div class="p-3">
           <h3>Mantente actualizado</h3>
@@ -295,7 +299,7 @@
           </p>
         </div>
         <form>
-          <div class="d-flex gap-3 p-3 align-items-center">
+          <div class="d-flex flex-wrap gap-3 p-3 align-items-center">
             <div>
               <input
                 type="text"
@@ -319,6 +323,22 @@
         </form>
       </div>
     </section>
+
+    <footer id="footer" class="p-5">
+      <div
+        class="container md-col-8 d-flex flex-column justify-content-center"
+      ></div>
+      <div class="p-md-4 d-flex flex-wrap gap-5 justify-content-center">
+        <a href="#mainNav" class="nav-link text-white">Inicio</a>
+        <a href="#homeSearch" class="nav-link text-white">Busca tu cita</a>
+        <a href="#features" class="nav-link text-white">Caracteristicas</a>
+        <a href="#reviews" class="nav-link text-white">Opiniones</a>
+        <a href="#contact" class="nav-link text-white">Contacto</a>
+      </div>
+      <div class="p-md-4 d-flex justify-content-center">
+        <span class="text-white"> © 2023 Devteam. All rights reserved.</span>
+      </div>
+    </footer>
 
     <script type="module" src="/src/index.js"></script>
   </body>
