Adding footer to search and checkoutForm pages

--- a/ConsultorioVirtual/checkoutForm.html
+++ b/ConsultorioVirtual/checkoutForm.html
@@ -111,5 +111,21 @@
       </div>
       <div></div>
     </section>
+
+    <footer id="footer" class="p-5">
+      <div
+        class="container md-col-8 d-flex flex-column justify-content-center"
+      ></div>
+      <div class="p-md-4 d-flex flex-wrap gap-5 justify-content-center">
+        <a href="#mainNav" class="nav-link text-white">Inicio</a>
+        <a href="#homeSearch" class="nav-link text-white">Busca tu cita</a>
+        <a href="#features" class="nav-link text-white">Caracteristicas</a>
+        <a href="#reviews" class="nav-link text-white">Opiniones</a>
+        <a href="#contact" class="nav-link text-white">Contacto</a>
+      </div>
+      <div class="p-md-4 d-flex justify-content-center">
+        <span class="text-white"> © 2023 Devteam. All rights reserved.</span>
+      </div>
+    </footer>
   </body>
 </html>
