--- a/ConsultorioVirtual/search.html
+++ b/ConsultorioVirtual/search.html
@@ -390,18 +390,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="container text-center">
-                <div class="row align-items-start">
-                  <div class="p-0 col border">
-                    One of three columns
-                  </div>
-                  <div class="p-0 col border">
-                    One of three columns
-                  </div>
-    
-                </div>
-  
-              </div> -->
             </div>
             <div class="col">
               <img
@@ -414,5 +402,21 @@
         </div>
       </div>
     </section>
+
+    <footer id="footer" class="p-5">
+      <div
+        class="container md-col-8 d-flex flex-column justify-content-center"
+      ></div>
+      <div class="p-md-4 d-flex flex-wrap gap-5 justify-content-center">
+        <a href="#mainNav" class="nav-link text-white">Inicio</a>
+        <a href="#homeSearch" class="nav-link text-white">Busca tu cita</a>
+        <a href="#features" class="nav-link text-white">Caracteristicas</a>
+        <a href="#reviews" class="nav-link text-white">Opiniones</a>
+        <a href="#contact" class="nav-link text-white">Contacto</a>
+      </div>
+      <div class="p-md-4 d-flex justify-content-center">
+        <span class="text-white"> © 2023 Devteam. All rights reserved.</span>
+      </div>
+    </footer>
   </body>
 </html>
