--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -30,329 +30,7 @@
     <title>Consultorio Virtual</title>
   </head>
   <body>
-    <nav id="mainNav" class="p-5 navbar navbar-expand-lg">
-      <div class="container md-col-8">
-        <a class="navbar-brand fs-3" href="#">@ Consultorio Virtual</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse fs-5" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex gap-3">
-            <li class="nav-item">
-              <a class="nav-link active me-auto" aria-current="page" href="#"
-                >Inicio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Preguntas Frecuentes</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Iniciar sesión
-              </a>
-              <ul id="dropdownNav" class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Usuario</a></li>
-                <li><a class="dropdown-item" href="#">Administrador</a></li>
-                <li></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item disabled" href="#">Zona de usuario</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <section id="homeSearch" class="d-flex justify-content-center">
-      <div class="d-flex flex-wrap p-5" id="searchForm">
-        <div class="p-3 me-lg-5">
-          <h1>Encuentra tu cita</h1>
-        </div>
-        <div class="d-flex p-3">
-          <form>
-            <div class="mb-3">
-              <label for="" class="form-label">Especialidad</label>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Especialidad (ej. pediatría)"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="" class="form-label">Ubicación</label>
-              <input
-                type="text"
-                size="40ch"
-                class="form-control"
-                placeholder="Ubicación (Centro médico)"
-              />
-            </div>
-            <div class="d-flex justify-content-between">
-              <div class="mb-3 form-check d-flex align-items-center">
-                <input type="checkbox" class="form-check-input" />
-                <label class="form-check-label ms-2">Consulta virtual</label>
-              </div>
-              <button type="button" class="btn btn-lg m-3 search">
-                Buscar
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <section id="mostSearched" class="p-5">
-      <div class="container lg-col-6 d-flex flex-column align-items-start">
-        <div>
-          <h3>Especialidades más buscadas</h3>
-        </div>
-        <div
-          class="container md-col-8 d-flex flex-wrap justify-content-around border border-black"
-        >
-          <button type="button" class="btn btn-lg m-3 py-4 search">
-            Medicina general
-          </button>
-          <button type="button" class="btn btn-lg m-3 py-4 search-2">
-            Pediatría
-          </button>
-          <button type="button" class="btn btn-lg m-3 py-4 search-3">
-            Nutrición
-          </button>
-        </div>
-      </div>
-    </section>
-
-    <section id="newDoctors" class="p-5">
-      <div class="container md-col-8 d-flex flex-column align-items-start">
-        <div>
-          <h3>Nuevos profesionales</h3>
-        </div>
-        <div
-          class="container lg-col-8 d-flex flex-wrap justify-content-around border border-black"
-        >
-          <div class="m-3 d-flex flex-column">
-            <img src="https://placehold.co/180x120" />
-            <div><span>Nombre </span> - <span> Especialidad</span></div>
-          </div>
-          <div class="m-3 d-flex flex-column">
-            <img src="https://placehold.co/180x120" />
-            <div><span>Nombre </span> - <span> Especialidad</span></div>
-          </div>
-          <div class="m-3 d-flex flex-column">
-            <img src="https://placehold.co/180x120" />
-            <div><span>Nombre </span> - <span> Especialidad</span></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="faqs" class="p-5">
-      <div class="container md-col-8 d-flex flex-wrap justify-content-between">
-        <div class="d-flex flex-column justify-content-center">
-          <h3>Preguntas frecuentes</h3>
-          <h5 class="py-2">
-            Podrás resolver, todas tus dudas en materia de salud.
-          </h5>
-          <ul>
-            <li>Recibirás una respuesta fiable y de calidad</li>
-            <li>Tu duda será resuelta en 48 horas</li>
-            <li>Y, por supuesto, de forma gratuita</li>
-          </ul>
-        </div>
-        <div class="px-md-5">
-          <img src="https://placehold.co/260x300" alt="Faqs" />
-        </div>
-      </div>
-    </section>
-
-    <section id="features" class="p-5">
-      <div class="container md-col-8 d-flex flex-wrap">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card text-center h-100">
-              <i class="bi bi-star fs-1"></i>
-              <div class="card-body">
-                <h5 class="card-title">Encuentra a tu médico</h5>
-                <p class="card-text">Selecciona el especialista y ubicación.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card text-center h-100">
-              <i class="bi bi-clock fs-1"></i>
-              <div class="card-body">
-                <h5 class="card-title">Elije el horario</h5>
-                <p class="card-text">
-                  Selecciona fecha y hora y agenda tu cita en el horario que mas
-                  te convenga.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card text-center h-100">
-              <i class="bi bi-flag fs-1"></i>
-              <div class="card-body">
-                <h5 class="card-title">Confirmación y pago</h5>
-                <p class="card-text">
-                  Confirma la cita en un minuto y realiza el pago desde la
-                  plataforma.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="reviews" class="p-5 container md-col-8">
-      <div id="carouselReviews" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="card text-center h-100">
-              <div
-                class="card-body d-flex flex-column align-items-center review-card"
-              >
-                <p class="card-text w-50">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque."
-                </p>
-                <img src="https://placehold.co/80x80" class="rounded-circle" />
-                <h5 class="py-2">Faustino Asprilla - Usuario</h5>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card text-center h-100">
-              <div
-                class="card-body d-flex flex-column align-items-center review-card"
-              >
-                <p class="card-text w-50">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
-                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
-                </p>
-                <img src="https://placehold.co/80x80" class="rounded-circle" />
-                <h5 class="py-2">Carlos Valderrama- Médico general</h5>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="card text-center h-100">
-              <div
-                class="card-body d-flex flex-column align-items-center review-card"
-              >
-                <p class="card-text w-50">
-                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.
-                  Duis vulputate commodo lectus, ac blandit elit tincidunt id."
-                </p>
-                <img src="https://placehold.co/80x80" class="rounded-circle" />
-
-                <h5 class="py-2">Leonel Alvarez - Usuario</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselReviews"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselReviews"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </section>
-
-    <section id="contact" class="d-flex justify-content-center">
-      <div class="d-flex flex-column p-5 align-items-center" id="contactForm">
-        <div class="p-3">
-          <h3>Mantente actualizado</h3>
-          <p>
-            Suscribete a nuestro boletín mensual con actualizaciones del sitio.
-          </p>
-        </div>
-        <form>
-          <div class="d-flex flex-wrap gap-3 p-3 align-items-center">
-            <div>
-              <input
-                type="text"
-                size="25ch"
-                class="form-control"
-                placeholder="Correo electrónico"
-              />
-            </div>
-            <div>
-              <input
-                type="text"
-                size="25ch"
-                class="form-control"
-                placeholder="Nombre completo"
-              />
-            </div>
-            <div>
-              <button type="button" class="btn search-2">Suscribete</button>
-            </div>
-          </div>
-        </form>
-      </div>
-    </section>
-
-    <footer id="footer" class="p-5">
-      <div
-        class="container md-col-8 d-flex flex-column justify-content-center"
-      ></div>
-      <div class="p-md-4 d-flex flex-wrap gap-5 justify-content-center">
-        <a href="#mainNav" class="nav-link text-white">Inicio</a>
-        <a href="#homeSearch" class="nav-link text-white">Busca tu cita</a>
-        <a href="#features" class="nav-link text-white">Caracteristicas</a>
-        <a href="#reviews" class="nav-link text-white">Opiniones</a>
-        <a href="#contact" class="nav-link text-white">Contacto</a>
-      </div>
-      <div class="p-md-4 d-flex justify-content-center">
-        <span class="text-white"> © 2023 Devteam. All rights reserved.</span>
-      </div>
-    </footer>
-
-    <section>
-      <div>
-        <a href="search.html">Resultados</a>
-      </div>
-    </section>
-
-    <section>
-      <div>
-        <a href="checkoutForm.html">Formulario de pago</a>
-      </div>
-    </section>
-
-    <script type="module" src="/src/index.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
