--- a/ConsultorioVirtual/index.html
+++ b/ConsultorioVirtual/index.html
@@ -25,7 +25,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
-    <link rel="stylesheet" href="src/index.css" />
+    <link rel="stylesheet" href="/src/index.css" />
 
     <title>Consultorio Virtual</title>
   </head>
